# fx-durable-ga-feature-engineering

./: .envrc  .gitignore  Cargo.toml  README.md  TODO.md  WARP.md  my_model.config.json  my_model.infer.csv  my_model.mpk
src/: batcher.rs  dataset.rs  infer_dataset.rs  inference.rs  loader.rs  main.rs  model.rs  parse.rs  parser.rs  preprocessing.rs  preprocessor.rs  train.rs
