[package]
name = "fx-durable-ga-example-feature-engineering"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.19.0", features = ["train", "ndarray"], default-features = false }
thiserror = "2.0.12"
regex = "1.12.2"
anyhow = "1.0.100"
approx = "0.5.1"
clap = { version = "4.5", features = ["derive"] }
