[package]
name = "fx-durable-ga-example-feature-engineering"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.19.0", features = ["train", "ndarray"], default-features = false }
thiserror = "2.0.12"
anyhow = "1.0.100"
approx = "0.5.1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
chrono = "0.4.39"
csv = "1.3"

[[bin]]
name = "feng"
path = "src/main.rs"
